<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Main!</string>
    <string name="app_name">Open Monitor</string>
    <string name="radio_button_website">Website</string>
    <string name="radio_button_service">Service</string>
    <string name="back_button">Back</string>
    <string name="isp_button">Go to ISP</string>
    <string name="check_box_filter">Filter Critical Events</string>
    <string name="text_ip">IP: </string>
    <string name="suggested_website_name">Website URL</string>
    <string name="suggested_service_name">Service Name</string>
    <string name="suggested_website_name_blank">Website URL can\'t be blank </string>
    <string name="servicename">Service Name</string>
    <string name="text_selected">Selected is : </string>
    <string name="send_button">Send</string>
    <string name="text_scanning">Override Default Scanning Interval</string>
    <string name="edit_text_interval">Enter Value</string>
    <string name="scan_button">Start/Stop Scan</string>
    <string name="scan_on">On</string>
    <string name="toast_email">Invalid Email Address!</string>
    <string name="toast_selection">No Selection!</string>
    <string name="toast_empty">Empty!</string>
    <string name="toast_new_scan_interval">New scan interval: </string>
    <string name="toast_seconds"> secs</string>
    <string name="scan_off">Off</string>
    <string name="toast_scan_change">Scan status changed to: </string>
    <string name="list_websites">Websites</string>
    <string name="list_services">Services</string>
    <string name="tab_information">Information</string>
    <string name="tab_control">Control</string>
    <string name="tab_map">Map</string>
    <string name="exception_timeout">Time Out!</string>
    <string name="ticker_up">Inc</string>
    <string name="ticker_down">Dec</string>
    <string name="start_service">Service Started</string>
    <string name="service_name">Notification Service</string>
    <string name="register_website_suggestion">Suggest Website</string>
    <string name="register_service_suggestion">Suggest Service</string>
    <string name="scan_text">Scan</string>
    <string name="website_details">Website Details</string>
    <string name="scan_status_off">Scanning is Off</string>
    <string name="no_sdcard">Error! No SD Card detected</string>
    <string name="edit_text_host">Enter Host Name</string>
    <string name="edit_text_ip">Enter IP</string>
    <string name="edit_text_port">Enter Port</string>
    <string name="remove_host_ip">Remove Host Name and/or IP for Website</string>
    <string name="invalid_host_ip">Missing Host Name and/or IP and/or Port</string>
    <string name="toast_ip">Invalid IP!</string>
    <string name="toast_port">Invalid Port!</string>
    <string name="loading">Loading</string>
    <string name="retrieving_website">Retrieving Website</string>
    <string name="filter_button_websites">Filter Websites</string>
    <string name="filter_button_services">Filter Services</string>
    <string name="flip_services">View Services</string>
    <string name="flip_websites">View Websites</string>
    <string name="location_changed">Location Changed</string>
    <string name="gps_disabled">GPS Disabled</string>
    <string name="gps_enabled">GPS Enabled</string>
    <string name="map_selection">Select Map Package</string>
    <string name="google_rb">Google Maps</string>
    <string name="osm_rb">Open Street Maps</string>
    <string name="google_maps_api_key">0ypQ-LmtOI2b8fxrT3C-qLA6Q1xkMrv2Krb3jrQ</string>
    <string name="google_maps_api_key_debug">0E8T-qQndWDjAGTyy5zopsE_NS8M4P49KqvzjyA</string>
    <string name="no_scan">No Scan Performed Yet</string>
    <string name="normal_status">Status: Normal</string>
    <string name="differentation_status">Status: Differentiation</string>
    <string name="status_code">Status Code:</string>
    <string name="location_disabled">Error! Both GPS and Network Provider Disabled</string>
    <string name="retrieving_service">Retrieving Service</string>
    <string name="scan_complete">Scan Completed</string>
    <string name="scan_complete_at">Scan Completed At:</string>
    <string name="scan_complete_id">:1</string>
    <string name="enable_twitter_button">Enable Twitter</string>
    <string name="disable_twitter_button">Disable Twitter</string>
    <string name="change_twitter_status">Change Twitter Status</string>
    <string name="enter_pin">Enter Pin</string>
    <string name="enable_pin">Enable Pin</string>
    <string name="select_all">Select All</string>
    <string name="unselect_all">Unselect All</string>
    <string name="bandwidth">Bandwidth:</string>
    <string name="response_time">Response Time:</string>
    <string name="response_time_unit">ms</string>
    <string name="bandwidth_unit">bytes/ms</string>
    <string name="about_button">About</string>
    <string name="about_text">\u00a9 2011 Umit Project</string>
    <string name="service_suggestion_sent">Service Suggestion Sent</string>     
    <string name="website_suggestion_sent">Website Suggestion Sent</string>
    <string name="username">Enter Username</string>
    <string name="password">Enter Password</string>
    <string name="repassword">ReEnter Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="subject">Subject</string>
    <string name="report">Report</string>
    <string name="email">Email (Optional)</string>
    <string name="description">Description</string>
    <string name="bug_describe">Please describe the bug</string>
    <string name="deviation">Deviation from Benchmark: </string>
    <string name="deviation_unit">bytes/ms</string>
    <string name="bug_report_button">Report Bug</string>
    <string name="link_to_umit">www.umitproject.org</string>
    <string name="link_to_open_monitor">www.openmonitor.org</string>
    <string name="icons_by"> Icons by http://dryicons.com</string>
    <string name="bug_report">Bug Report Sent</string>
    <string name="average_throughput">Average Throughput:</string>
    <string name="bug_subject">Please enter Subject</string>
    <string name="bug_crash">[BugCrashReport]</string>
    <string name="from">From</string>
    <string name="logging_in">Logging in..</string>
    <string name="registering">Exchanging Credentials..</string>
    <string name="registration_complete">Credentials Exchanged</string>
    <string name="login_complete">Login Complete</string>
    <string name="registration_failed">Credentials Exchange Failed</string>
    <string name="login_failed">Login Failed</string>
    <string name="status">Status:</string>
    <string name="port">Port:</string>
    <string name="host">Host:</string>
    <string name="calculating">Calculating....</string>
    <string name="connectivity_service_kill">ConnectivityService killed</string>
</resources>