<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
      <EditText 
    	android:id="@+id/ServiceName" 
    	android:layout_height="wrap_content"
    	android:layout_width="fill_parent"
    	android:layout_centerHorizontal="true"
    	android:textSize="20sp" 
    	android:hint="@string/suggested_service_name" />
      
      <EditText 
    	android:id="@+id/ServiceHost" 
    	android:layout_height="wrap_content"
    	android:layout_width="fill_parent"  
    	android:hint="@string/edit_text_host"
    	android:layout_centerHorizontal="true"
    	android:textSize="20sp"
    	android:layout_below="@id/ServiceName"  />
        
    <EditText 
    	android:id="@+id/ServiceIP" 
    	android:layout_height="wrap_content"
    	android:layout_width="fill_parent"  
    	android:hint="@string/edit_text_ip"
    	android:layout_centerHorizontal="true"
    	android:textSize="20sp"
    	android:layout_below="@id/ServiceHost">
    </EditText>
    
     <EditText 
    	android:id="@+id/ServicePort" 
    	android:layout_height="wrap_content"
    	android:layout_width="fill_parent"  
    	android:hint="@string/edit_text_port"
    	android:layout_centerHorizontal="true"
    	android:textSize="20sp"
    	android:layout_below="@id/ServiceIP">
    </EditText>
      
     <Button 
    	android:id="@+id/SendServiceSuggestion" 
    	android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:text="@string/send_button"
        android:textSize="20sp" 
        android:layout_centerHorizontal="true"
        android:layout_below="@id/ServicePort">
     </Button>
    

</RelativeLayout>