<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 * Copyright (C) 2011 Adriano Monteiro Marques
 *
 * Author:  Zubair Nabi <zn.zubairnabi@gmail.com>
 *
 * This program is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 2 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307
 * USA
 */
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent">
    
    <RadioGroup 
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_width="wrap_content"
		android:layout_centerHorizontal="true"
		android:id="@+id/controlrg">
		
	
		<RadioButton 
			android:checked="false"
			android:id="@+id/websiterb" 
			android:textSize="20sp"
			android:text="@string/radio_button_website"/>
	
		<RadioButton 
			android:checked="false"
			android:id="@+id/servicerb"
			android:textSize="20sp" 
			android:text="@string/radio_button_service"/>
	</RadioGroup>

    <EditText 
    	android:id="@+id/EditText01" 
    	android:layout_height="wrap_content"
    	android:layout_width="fill_parent"
    	android:layout_below="@id/controlrg"
    	android:layout_centerHorizontal="true"
    	android:textSize="20sp" 
    	android:hint="@string/suggested_website_name">
    </EditText>
    
    <EditText 
    	android:id="@+id/EditTextHost" 
    	android:layout_height="wrap_content"
    	android:layout_width="fill_parent"  
    	android:hint="@string/edit_text_host"
    	android:layout_centerHorizontal="true"
    	android:textSize="20sp"
    	android:layout_below="@id/EditText01">
    </EditText>
        
    <EditText 
    	android:id="@+id/EditTextIP" 
    	android:layout_height="wrap_content"
    	android:layout_width="fill_parent"  
    	android:hint="@string/edit_text_ip"
    	android:layout_centerHorizontal="true"
    	android:textSize="20sp"
    	android:layout_below="@id/EditTextHost">
    </EditText>
    
     <EditText 
    	android:id="@+id/EditTextPORT" 
    	android:layout_height="wrap_content"
    	android:layout_width="fill_parent"  
    	android:hint="@string/edit_text_port"
    	android:layout_centerHorizontal="true"
    	android:textSize="20sp"
    	android:layout_below="@id/EditTextIP">
    </EditText>
    

    <Button 
    	android:id="@+id/Button01" 
    	android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:text="@string/send_button"
        android:textSize="20sp" 
        android:layout_centerHorizontal="true"
        android:layout_below="@id/EditTextPORT">
     </Button>

</RelativeLayout>