<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <EditText
        android:id="@+id/regUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/regPassword"
        android:hint="@string/username"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/regPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/regUsername"
        android:ems="10"
        android:hint="@string/password"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/regconPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/regPassword"
        android:ems="10"
        android:hint="@string/repassword"
        android:textSize="20sp" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/regconPassword"
        android:layout_marginLeft="70dp"
        android:text="@string/register"
        android:textSize="20sp" />

</RelativeLayout>