<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 * Copyright (C) 2011 Adriano Monteiro Marques
 *
 * Author:  Zubair Nabi <zn.zubairnabi@gmail.com>
 *
 * This program is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 2 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307
 * USA
 */
-->
<ViewFlipper 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/flipper"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent">

	<RelativeLayout 
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent">
		<TextView  
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content"
		    android:text="@string/app_name"     
		    android:id="@+id/IMCTextView"/>
		    
		<TextView  
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content"
		    android:layout_below="@id/IMCTextView" 
		    android:text="@string/flip_services"
		    android:clickable="true"
		    android:id="@+id/goToServices"/>
		    
		<ListView 
			android:id="@+id/ListView01"
			android:layout_width="wrap_content"
			android:layout_below="@id/goToServices" 
			android:layout_height="wrap_content" />
			       
		<TextView  
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:layout_below="@id/ListView01"
		    android:text="@string/text_ip"
		    android:id="@+id/ipTextView"/>
	</RelativeLayout>

	<RelativeLayout 
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent">	    
		<TextView  
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content"	     
		    android:text="@string/flip_websites"
		    android:clickable="true"
		    android:id="@+id/goToWebsites"/>
		    
		<ListView 
			android:id="@+id/ListView02"
			android:layout_width="wrap_content"
			android:layout_below="@id/goToWebsites" 
			android:layout_height="wrap_content" />
		
	</RelativeLayout>
</ViewFlipper>
