<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 * Copyright (C) 2011 Adriano Monteiro Marques
 *
 * Author:  Zubair Nabi <zn.zubairnabi@gmail.com>
 *
 * This program is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 2 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307
 * USA
 */
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent">
    
    <RadioGroup 
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_width="wrap_content"
		android:layout_centerHorizontal="true"
		android:id="@+id/maprg">		
	
		<RadioButton 
			android:checked="false"
			android:id="@+id/googlerb" 
			android:textSize="20sp"
			android:text="@string/google_rb"/>
	
		<RadioButton 
			android:checked="false"
			android:id="@+id/osmrb"
			android:textSize="20sp" 
			android:text="@string/osm_rb"/>
	</RadioGroup>      
  
    <Button 
    	android:id="@+id/backButton" 
    	android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:text="@string/back_button"
        android:textSize="20sp" 
        android:layout_centerHorizontal="true"
        android:layout_below="@id/maprg">
     </Button>

</RelativeLayout>